# GraphHammer

./: README  README.md
GraphHammer/: GraphHammer.cabal  LICENSE  README  README.md
GraphHammer-examples/: GraphHammer-examples.cabal  README  README.md
GraphHammer-examples/src/: ClusteringCoefficientTest.hs  OneToOneGraphGenerator.hs  RectangleGraphGenerator.hs  TriangleCountTest.hs
GraphHammer-examples/src/GraphHammer/: ClusteringCoefficient.hs  TriangleCount.hs
GraphHammer-examples/src/helpers/: analyze.tcl
GraphHammer/src/: GraphHammer.hs
GraphHammer/src/Control/Graph/: Interface.hs
GraphHammer/src/GraphHammer/: ClusteringCoefficient.hs  HList.hs  Info.hs  IntMap.hs  IntSet.hs  Simplest.hs  SimplestParallel.hs  TriangleCount.hs  VertexDegree.hs
GraphHammerTest/: .gitignore  GraphHammerTest.cabal  README
GraphHammerTest/src/: GraphHammerTest.hs
GraphHammerTest/src/Control/Graph/Tests/: G500Benchmark.hs  Graph500BFS.hs  TriangleCount.hs  VertexDegree.hs
STINGER/: README  STINGER.cabal
STINGER/src/: STINGER.hs
STINGER/src/STINGER/: HList.hs  Info.hs  IntMap.hs  IntSet.hs  Simplest.hs  SimplestParallel.hs  SimplestVerification.hs  SimplestWithArrays.hs  TriangleCount.hs  VertexDegree.hs
STINGER/src/STINGER/Test/: Server.hs
TriangleCountTest/: README  TriangleCountTest.cabal
TriangleCountTest/src/: ClusteringCoefficientTest.hs  OneToOneGraphGenerator.hs  RectangleGraphGenerator.hs  TriangleCountTest.hs
