Name:                GraphHammer
Version:             0.3
Synopsis:            GraphHammer Haskell graph analyses framework inspired by STINGER.
-- Description:
License:             AllRightsReserved
License-file:        LICENSE
Author:              serguey.zefirov@parsci.com
Maintainer:          serguey.zefirov@parsci.com
Copyright:           2013 Parallel Scientific Labs, LLC
Category:            Concurrency
Build-type:          Simple
-- Extra-source-files:
Cabal-version:       >=1.2


Library
  -- Modules exported by the library.
  Exposed-modules:     GraphHammer, 
                       GraphHammer.Info, 
                       GraphHammer.HList,
                       GraphHammer.SimplestParallel,
                       GraphHammer.TriangleCount,
                       GraphHammer.VertexDegree

  -- Sources are in src/ subdirectory:
  hs-source-dirs:      src

  -- Packages needed in order to build this package.
  Build-depends:       base >= 3.0,
                       containers >= 0.3,
                       mtl >= 1.1,
                       array >= 0.3,
                       stm >= 2.1 && < 3,
                       old-time >= 1.0 && < 1.1,
                       Graph500 >= 0.3

  -- Modules not exported by this package.
  Other-modules:       GraphHammer.IntSet, GraphHammer.IntMap

  -- Build-tools:
  ghc-options: -O3
