-- The name of the package.
Name:                GraphHammerTest

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            Tset suite for abstract interface to graph query engine

-- A longer description of the package.
-- Description:         

-- The license under which the package is released.
License:             AllRightsReserved

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Parallel Scientific, LLC

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          jeff.epstein@parsci.com

-- A copyright notice.
-- Copyright:           

Category:            Concurrency

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
Extra-source-files:  README

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Executable GraphHammerTest
  hs-source-dirs:      src
  Main-is:             GraphHammerTest.hs
  Build-depends:      
  Build-depends:       base >= 3.0,
                       array >= 0.3,
                       time >= 1.0,
                       random >= 1.0,
                       LanGra >= 0.1,
                       GraphHammer >= 0.1,
                       HUnit >= 1.2,
                       HiPerQ-ref >= 0.1,
                       Graph500 >= 0.4
  

  
  -- Modules not exported by this package.
  Other-modules:       Control.Graph.Tests.G500Benchmark, Control.Graph.Tests.TriangleCount, Control.Graph.Tests.VertexDegree
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

  ghc-options: -O3
