Name:                TriangleCountTest
Version:             0.3
Synopsis:            Test harness for TriangleCount analysis.
-- Description:         
License:             GPL-2
License-file:        LICENSE
Author:              serguey.zefirov@parsci.com
Maintainer:          alexander.vershilov@parsci.com
Copyright:           2013, Parallel Scientific Labs, LLC
Category:            Concurrency
Build-type:          Simple
Cabal-version:       >=1.2


Executable TriangleCountTest
  hs-source-dirs:      src
  Main-is:             TriangleCountTest.hs
  Build-depends:       base >= 3.0,
                       containers >= 0.3,
                       mtl >= 1.1,
                       array >= 0.3,
                       Graph500 >= 0.3,
                       GraphHammer >= 0.3
  ghc-options: -rtsopts -threaded -O3


Executable ClusteringCoefficientTest
  hs-source-dirs:      src
  Main-is:             ClusteringCoefficientTest.hs
  Build-depends:       base >= 3.0,
                       containers >= 0.3,
                       mtl >= 1.1,
                       array >= 0.3,
                       Graph500 >= 0.3,
                       GraphHammer >= 0.3
  ghc-options: -rtsopts -threaded -O3
